Prevent page scrolling; stretch volume to fill container

--- a/www/public/style.css
+++ b/www/public/style.css
@@ -1,5 +1,5 @@
-* {/* margin:0; *//* padding:0; */ box-sizing:border-box}
-html,body { height:100%; min-height:100% }
+* { box-sizing:border-box}
+html,body { height:100%; min-height:100%; overflow:hidden }
 body { font-family:"Calibri Light", Calibri;  }
 #playing { position:fixed; top:0; left:0; width:100%; background:#cec; display:flex; flex-direction:row; height:80px; justify-content:space-around; flex-grow:0 }
 #playing > * { flex-grow:1; display:flex; }
@@ -9,7 +9,7 @@ body { font-family:"Calibri Light", Calibri;  }
 #controls button:active { opacity:1; color:black }
 
 #song { background:#cde; justify-content:space-between; }
-#artwork, #rate { width:80px; height:80px; background:green;  }
+#artwork, #rate { width:80px; height:80px; min-width:80px; background:green }
 #summary { display:flex; flex-direction:column; justify-content:center; padding:0 20px }
 #summary > * { margin:3px;}
 #title { font-weight:bold }
@@ -21,6 +21,7 @@ body { font-family:"Calibri Light", Calibri;  }
 #remaining { text-align:right }
 
 #volume { display:flex; justify-content:center; }
+#volume input { width:94% }
 
 #queues { position:fixed; top:84px; left:0; width:100%; bottom:62px; overflow:hidden; display:flex; flex-direction:row; justify-content:space-between; align-items:flex-start; flex-grow:1 }
 #queues table { display:flex; flex-flow:column; height:100%; margin-right:4px; overflow:hidden }
